# drf-browseable-views

./: README.md  manage.py  pyproject.toml
drf_browseable_views/: asgi.py  settings.py  urls.py  views.py  wsgi.py
