[tool.poetry]
name = "drf-browseable-views"
version = "0.1.0"
description = "Demo: registering Django views in a Django REST Framework router."
authors = ["Sumanth Ratna <sumanthratna@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.1.4"
djangorestframework = "^3.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
